Add Async loader with dialog that runs when the app creates the thumbnails inorder to not allow the user interact with the app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,10 @@
         <activity android:name=".adapters.TutorialActivity">
 
 
-
         </activity>
-        <activity android:name=".ResumeOfSelection" />
+        <activity
+            android:name=".ResumeOfSelection"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".SessionSelector"
             android:screenOrientation="landscape" />
